# sakiLanguage

./: Cargo.toml  README.md  hello.saki
.github/workflows/: ci.yml
src/: ast.rs  bytecode.rs  environment.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs  seismic.rs  token.rs  value.rs
tests/: environment.rs  interpreter.rs  parser.rs  seismic.rs
